2015-03-04  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-5.
	* Exported and documented the mcsTest.
	* Added confint S4 method (same as stats S3 confint) at user's 
    request (replaces previous confinterval naming).
    * Fix to iGARCH simulation (thanks to Andy Tang).
    * Added the reduce method to ARFIMAfit class
    (was previously only available for uGARCHfit class).
    * Added the arfimacv function for ARFIMAX time series cross-validation.
    * Fixes to some examples (were based on deprecated extractor methods).

2014-11-08  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-4.
	* Added a numderiv.control argument to the ugarchfit and arfimafit
	functions to provide finer control on the estimation of the standard
	errors using numerical derivatives based on the hessian and jacobian 
	functions in the numDeriv package.
	* Tweaked the standard error calculation for the robust method.
	* Added parallel in Depends to avoid warning on CRAN.

2014-05-22  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-3.
	* Fix to Vlaar and Palm GoF test in case of shaped distribution (shape parameter
	did not get passed to cdf function during the transformation).
	* Fixes to vignettes.

2014-04-26  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-2.
	* Fixed setting of bounds on ARFIMAspec object.
	* When setting starting or fixed parameters on a uGARCHspec or ARFIMAspec
	object with previously set custom bounds, these were overwritten by defaults.
	This is now fixed and they are propagated (but no checks yet that starting
	or fixed parameters are within those bounds).
	* Adjustment to VaRTest to avoid problems with large N.

2014-02-21  Alexios Ghalanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.3-1.
	* Patched to work with recent changes to Rcpp.